# class_booking_system

./: .env.example  .gitignore  README.md  class_booking_system_plan.md  cleanup_cancelled_schedules.py  interview-multitenant-system.md  note.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  question.md  turbo.json
apps/api/: README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 4bd04b738098_init_all_tables.py
apps/api/docs/: example_rbac_usage.py
apps/api/scripts/: generate_openapi.py  seed.py  test_api.sh
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/core/: __init__.py  base_repository.py  config.py  database.py  exceptions.py  response.py  security.py  tenant_context.py  tenant_query.py
apps/api/src/app/core/oss/: __init__.py  service.py
apps/api/src/app/core/rbac/: __init__.py  cache.py  checker.py  decorator.py
apps/api/src/app/middleware/: error_handler.py  rate_limiter.py  tenant_middleware.py
apps/api/src/app/modules/: __init__.py
apps/api/src/app/modules/admin/: __init__.py  router.py  schemas.py  service.py
apps/api/src/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/app/modules/booking/: models.py  repository.py  router.py  schemas.py  (+1 more)
apps/api/src/app/shared/: base_model.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: T03_AUTH_README.md  test_auth_api.py  test_infrastructure.py  test_rbac.py  test_rbac_real_redis.py  test_tenant_isolation.py  test_user_api.py
apps/api/tests/unit/: test_models.py
(+93 files in other folders)
