[project]
name = "dance-saas-api"
version = "0.1.0"
description = "Dance SaaS Backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt==4.1.*",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
